// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select can have an error message 1`] = `
.c9 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #c12335;
  font-size: 1rem;
}

.c9::before {
  content: '\\f103';
}

.c11 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #c12335;
  font-size: 1rem;
}

.c11::before {
  content: '\\f105';
}

.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c3 {
  color: #2a2c2e;
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
  text-align: left;
}

.c3 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c2 {
  border-radius: 4px;
  background-color: #fff6f8;
}

.c8 {
  line-height: 1;
}

.c5 {
  background-color: #fff;
  position: relative;
}

.c6 {
  height: 3.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  -moz-appearance: textfield;
  min-height: 3.25rem;
  max-height: 3.25rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c6::-ms-expand {
  display: none;
}

.c6::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-webkit-inner-spin-button,
.c6::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c6:not(:focus) {
  border-color: #c12335;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c10 {
  line-height: 1;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
}

<Select
  defaultValue=""
  error="Oh no a terrible error!"
  feedback="error"
  id="some-id"
  label="The select"
  options={
    Array [
      Object {
        "readOnly": true,
        "text": "text one",
        "value": "value-1",
      },
      Object {
        "readOnly": true,
        "text": "text two",
        "value": "value-2",
      },
    ]
  }
>
  <Box
    between={2}
    inline={false}
    tag="div"
  >
    <div
      className="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
    >
      <Box
        between="space-between"
        inline={true}
        tag="div"
      >
        <div
          className="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz"
        >
          <label
            htmlFor="some-id"
          >
            <Styled(Box)
              between={2}
              inline={true}
              tag="span"
            >
              <StyledComponent
                between={2}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-EHOje",
                      "isStatic": true,
                      "lastClassName": "c0",
                      "rules": Array [
                        "align-items: center;",
                      ],
                    },
                    "displayName": "Styled(Box)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-EHOje",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                inline={true}
                tag="span"
              >
                <Box
                  between={2}
                  className="c0"
                  inline={true}
                  tag="span"
                >
                  <span
                    className="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz c0"
                  >
                    <Text
                      block={false}
                      bold={true}
                      data-testid="selectLabel"
                      invert={false}
                      size="medium"
                    >
                      <Text__StyledText
                        block={false}
                        bold={true}
                        data-testid="selectLabel"
                        invert={false}
                        size="medium"
                      >
                        <StyledComponent
                          block={false}
                          bold={true}
                          data-testid="selectLabel"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "Text__StyledText-sc-1m0rr67-0",
                                "isStatic": false,
                                "lastClassName": "c1",
                                "rules": Array [
                                  [Function],
                                  [Function],
                                  [Function],
                                  [Function],
                                  [Function],
                                  "sup {",
                                  "top: -0.5em;",
                                  "font-size: 0.875rem;",
                                  "position: relative;",
                                  "vertical-align: baseline;",
                                  "padding-left: 0.1em;",
                                  "}",
                                ],
                              },
                              "displayName": "Text__StyledText",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                              "target": "span",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          invert={false}
                          size="medium"
                        >
                          <span
                            className="c1"
                            data-testid="selectLabel"
                            size="medium"
                          >
                            The select
                          </span>
                        </StyledComponent>
                      </Text__StyledText>
                    </Text>
                  </span>
                </Box>
              </StyledComponent>
            </Styled(Box)>
          </label>
        </div>
      </Box>
      <InputFeedback
        feedback="error"
        id="some-id_error-message"
      >
        <Styled(Component)
          feedback="error"
          id="some-id_error-message"
          inset={3}
          role="alert"
        >
          <StyledComponent
            feedback="error"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    [Function],
                  ],
                },
                "displayName": "Styled(Component)",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            id="some-id_error-message"
            inset={3}
            role="alert"
          >
            <Component
              className="c2"
              feedback="error"
              id="some-id_error-message"
              inset={3}
              role="alert"
            >
              <Box
                className="c2"
                id="some-id_error-message"
                inline={false}
                inset={3}
                role="alert"
                tag="div"
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 c2"
                  id="some-id_error-message"
                  role="alert"
                >
                  <Paragraph
                    align="left"
                    bold={false}
                    invert={false}
                    size="small"
                  >
                    <Paragraph__StyledParagraph
                      align="left"
                      bold={false}
                      invert={false}
                      size="small"
                    >
                      <StyledComponent
                        align="left"
                        bold={false}
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "Paragraph__StyledParagraph-efl81j-0",
                              "isStatic": false,
                              "lastClassName": "c3",
                              "rules": Array [
                                [Function],
                                "word-wrap: break-word;",
                                "padding: 0;",
                                "margin: 0;",
                                [Function],
                                [Function],
                                [Function],
                                [Function],
                                "sup {",
                                "top: -0.5em;",
                                "font-size: 0.875rem;",
                                "position: relative;",
                                "vertical-align: baseline;",
                                "padding-left: 0.1em;",
                                "}",
                              ],
                            },
                            "displayName": "Paragraph__StyledParagraph",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "Paragraph__StyledParagraph-efl81j-0",
                            "target": "p",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        invert={false}
                        size="small"
                      >
                        <p
                          className="c3"
                          size="small"
                        >
                          Oh no a terrible error!
                        </p>
                      </StyledComponent>
                    </Paragraph__StyledParagraph>
                  </Paragraph>
                </div>
              </Box>
            </Component>
          </StyledComponent>
        </Styled(Component)>
      </InputFeedback>
      <styled.div
        _css={
          Object {
            "position": "relative",
          }
        }
      >
        <StyledComponent
          _css={
            Object {
              "position": "relative",
            }
          }
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bZQynM",
                "isStatic": false,
                "lastClassName": "c4",
                "rules": Array [
                  [Function],
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bZQynM",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="c4"
          >
            <Select__SelectWrapper>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Select__SelectWrapper-sc-1kajzpi-0",
                      "isStatic": true,
                      "lastClassName": "c5",
                      "rules": Array [
                        "background-color: #fff;",
                        "position: relative;",
                      ],
                    },
                    "displayName": "Select__SelectWrapper",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Select__SelectWrapper-sc-1kajzpi-0",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="c5"
                >
                  <Select__StyledSelect
                    aria-describedby="some-id_error-message"
                    aria-invalid={true}
                    defaultValue=""
                    feedback="error"
                    id="some-id"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <StyledComponent
                      aria-describedby="some-id_error-message"
                      aria-invalid={true}
                      defaultValue=""
                      feedback="error"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "Select__StyledSelect-sc-1kajzpi-1",
                            "isStatic": false,
                            "lastClassName": "c6",
                            "rules": Array [
                              "height: 3.25rem;",
                              "appearance: none;",
                              "&::-ms-expand {",
                              "display: none;",
                              "}",
                              "width: 100%;",
                              "margin: 0;",
                              "outline: 0;",
                              "text-overflow: ellipsis;",
                              "border-color: #54595f;",
                              "background-color: #fff;",
                              "&::placeholder {",
                              "font: inherit;",
                              "letter-spacing: inherit;",
                              "line-height: inherit;",
                              "color: #54595f;",
                              "}",
                              [Function],
                              "border-width: 1px;",
                              "border-style: solid;",
                              "border-radius: 4px;",
                              "font-family: \\"TELUS-Web\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif;",
                              "word-wrap: break-word;",
                              "font-size: 1rem;",
                              "letter-spacing: -0.8px;",
                              "line-height: 1.5;",
                              "font-weight: 400;",
                              "color: #2a2c2e;",
                              [Function],
                              "&:focus {",
                              "border-color: transparent;",
                              "box-shadow: 0 0 4px 1px #54595f;",
                              "background-color: #fff;",
                              "}",
                              [Function],
                              [Function],
                            ],
                          },
                          "displayName": "Select__StyledSelect",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "Select__StyledSelect-sc-1kajzpi-1",
                          "target": "select",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      id="some-id"
                      onBlur={[Function]}
                      onFocus={[Function]}
                    >
                      <select
                        aria-describedby="some-id_error-message"
                        aria-invalid={true}
                        className="c6"
                        defaultValue=""
                        id="some-id"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <option
                          key="value-1"
                          value="value-1"
                        >
                          text one
                        </option>
                        <option
                          key="value-2"
                          value="value-2"
                        >
                          text two
                        </option>
                      </select>
                    </StyledComponent>
                  </Select__StyledSelect>
                  <Styled(Box)
                    between={3}
                    inline={true}
                  >
                    <StyledComponent
                      between={3}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-ifAKCX",
                            "isStatic": true,
                            "lastClassName": "c7",
                            "rules": Array [
                              "position: absolute;",
                              "top: 50%;",
                              "transform: translateY(-50%);",
                              "right: 1rem;",
                              "pointer-events: none;",
                            ],
                          },
                          "displayName": "Styled(Box)",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-ifAKCX",
                          "target": [Function],
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      inline={true}
                    >
                      <Box
                        between={3}
                        className="c7"
                        inline={true}
                        tag="div"
                      >
                        <div
                          className="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz c7"
                        >
                          <FeedbackIcon
                            feedback="error"
                            showIcon={true}
                          >
                            <Fade
                              in={true}
                              mountOnEnter={true}
                              timeout={100}
                              unmountOnExit={true}
                            >
                              <Transition
                                appear={false}
                                enter={true}
                                exit={true}
                                in={true}
                                mountOnEnter={true}
                                onEnter={[Function]}
                                onEntered={[Function]}
                                onEntering={[Function]}
                                onExit={[Function]}
                                onExited={[Function]}
                                onExiting={[Function]}
                                timeout={100}
                                unmountOnExit={true}
                              >
                                <div
                                  style={
                                    Object {
                                      "opacity": 1,
                                      "transition": "opacity 100ms ease-in-out",
                                    }
                                  }
                                >
                                  <FeedbackIcon__StyledIcon>
                                    <StyledComponent
                                      forwardedComponent={
                                        Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "attrs": Array [],
                                          "componentStyle": ComponentStyle {
                                            "componentId": "FeedbackIcon__StyledIcon-yxz8rh-0",
                                            "isStatic": true,
                                            "lastClassName": "c8",
                                            "rules": Array [
                                              "line-height: 1;",
                                            ],
                                          },
                                          "displayName": "FeedbackIcon__StyledIcon",
                                          "foldedComponentIds": Array [],
                                          "render": [Function],
                                          "styledComponentId": "FeedbackIcon__StyledIcon-yxz8rh-0",
                                          "target": "div",
                                          "toString": [Function],
                                          "warnTooManyClasses": [Function],
                                          "withComponent": [Function],
                                        }
                                      }
                                      forwardedRef={null}
                                    >
                                      <div
                                        className="c8"
                                      >
                                        <StandaloneIcon
                                          a11yText="The value of this input field is invalid."
                                          size={16}
                                          symbol="exclamationPointCircle"
                                          variant="error"
                                        >
                                          <Icon
                                            size={16}
                                            symbol="exclamationPointCircle"
                                            variant="error"
                                          >
                                            <Icon__StyledIcon
                                              iSize={16}
                                              symbol="exclamationPointCircle"
                                              variant="error"
                                            >
                                              <StyledComponent
                                                forwardedComponent={
                                                  Object {
                                                    "$$typeof": Symbol(react.forward_ref),
                                                    "attrs": Array [],
                                                    "componentStyle": ComponentStyle {
                                                      "componentId": "Icon__StyledIcon-sc-1g20dn8-0",
                                                      "isStatic": false,
                                                      "lastClassName": "c9",
                                                      "rules": Array [
                                                        [Function],
                                                        [Function],
                                                        [Function],
                                                      ],
                                                    },
                                                    "displayName": "Icon__StyledIcon",
                                                    "foldedComponentIds": Array [],
                                                    "render": [Function],
                                                    "styledComponentId": "Icon__StyledIcon-sc-1g20dn8-0",
                                                    "target": "i",
                                                    "toString": [Function],
                                                    "warnTooManyClasses": [Function],
                                                    "withComponent": [Function],
                                                  }
                                                }
                                                forwardedRef={null}
                                                iSize={16}
                                                symbol="exclamationPointCircle"
                                                variant="error"
                                              >
                                                <i
                                                  className="c9"
                                                />
                                              </StyledComponent>
                                            </Icon__StyledIcon>
                                          </Icon>
                                        </StandaloneIcon>
                                      </div>
                                    </StyledComponent>
                                  </FeedbackIcon__StyledIcon>
                                </div>
                              </Transition>
                            </Fade>
                          </FeedbackIcon>
                          <Select__IconLineFix>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "Select__IconLineFix-sc-1kajzpi-2",
                                    "isStatic": true,
                                    "lastClassName": "c10",
                                    "rules": Array [
                                      "line-height: 1;",
                                    ],
                                  },
                                  "displayName": "Select__IconLineFix",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "Select__IconLineFix-sc-1kajzpi-2",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="c10"
                              >
                                <DecorativeIcon
                                  size={16}
                                  symbol="caretDown"
                                  variant="error"
                                >
                                  <Icon
                                    aria-hidden="true"
                                    size={16}
                                    symbol="caretDown"
                                    variant="error"
                                  >
                                    <Icon__StyledIcon
                                      aria-hidden="true"
                                      iSize={16}
                                      symbol="caretDown"
                                      variant="error"
                                    >
                                      <StyledComponent
                                        aria-hidden="true"
                                        forwardedComponent={
                                          Object {
                                            "$$typeof": Symbol(react.forward_ref),
                                            "attrs": Array [],
                                            "componentStyle": ComponentStyle {
                                              "componentId": "Icon__StyledIcon-sc-1g20dn8-0",
                                              "isStatic": false,
                                              "lastClassName": "c11",
                                              "rules": Array [
                                                [Function],
                                                [Function],
                                                [Function],
                                              ],
                                            },
                                            "displayName": "Icon__StyledIcon",
                                            "foldedComponentIds": Array [],
                                            "render": [Function],
                                            "styledComponentId": "Icon__StyledIcon-sc-1g20dn8-0",
                                            "target": "i",
                                            "toString": [Function],
                                            "warnTooManyClasses": [Function],
                                            "withComponent": [Function],
                                          }
                                        }
                                        forwardedRef={null}
                                        iSize={16}
                                        symbol="caretDown"
                                        variant="error"
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="c11"
                                        />
                                      </StyledComponent>
                                    </Icon__StyledIcon>
                                  </Icon>
                                </DecorativeIcon>
                              </div>
                            </StyledComponent>
                          </Select__IconLineFix>
                        </div>
                      </Box>
                    </StyledComponent>
                  </Styled(Box)>
                </div>
              </StyledComponent>
            </Select__SelectWrapper>
          </div>
        </StyledComponent>
      </styled.div>
    </div>
  </Box>
</Select>
`;

exports[`Select disabling deactivates the select 1`] = `[Function]`;

exports[`Select disabling removes the positioning of the select so that the disabled treatment is displayed 1`] = `[Function]`;

exports[`Select feedback states ensures that the contents do not overlap the icons 1`] = `[Function]`;

exports[`Select label can have a short hint 1`] = `
.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c2 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 0.875rem;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
  line-height: 1.42857;
  font-weight: 500;
}

.c2 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  htmlFor="the-select"
>
  <Styled(Box)
    between={2}
    inline={true}
    tag="span"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-EHOje",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "align-items: center;",
            ],
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-EHOje",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="c0"
        inline={true}
        tag="span"
      >
        <span
          className="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz c0"
        >
          <Text
            block={false}
            bold={true}
            data-testid="selectLabel"
            invert={false}
            size="medium"
          >
            <Text__StyledText
              block={false}
              bold={true}
              data-testid="selectLabel"
              invert={false}
              size="medium"
            >
              <StyledComponent
                block={false}
                bold={true}
                data-testid="selectLabel"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Text__StyledText-sc-1m0rr67-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        "sup {",
                        "top: -0.5em;",
                        "font-size: 0.875rem;",
                        "position: relative;",
                        "vertical-align: baseline;",
                        "padding-left: 0.1em;",
                        "}",
                      ],
                    },
                    "displayName": "Text__StyledText",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                invert={false}
                size="medium"
              >
                <span
                  className="c1"
                  data-testid="selectLabel"
                  size="medium"
                >
                  The select
                </span>
              </StyledComponent>
            </Text__StyledText>
          </Text>
          <Text
            block={false}
            bold={false}
            id="the-select_hint"
            invert={false}
            size="small"
          >
            <Text__StyledText
              block={false}
              bold={false}
              id="the-select_hint"
              invert={false}
              size="small"
            >
              <StyledComponent
                block={false}
                bold={false}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Text__StyledText-sc-1m0rr67-0",
                      "isStatic": false,
                      "lastClassName": "c2",
                      "rules": Array [
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        "sup {",
                        "top: -0.5em;",
                        "font-size: 0.875rem;",
                        "position: relative;",
                        "vertical-align: baseline;",
                        "padding-left: 0.1em;",
                        "}",
                      ],
                    },
                    "displayName": "Text__StyledText",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id="the-select_hint"
                invert={false}
                size="small"
              >
                <span
                  className="c2"
                  id="the-select_hint"
                  size="small"
                >
                  The short hint
                </span>
              </StyledComponent>
            </Text__StyledText>
          </Text>
        </span>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</label>
`;

exports[`Select label must have a label 1`] = `
.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  htmlFor="the-label"
>
  <Styled(Box)
    between={2}
    inline={true}
    tag="span"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-EHOje",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "align-items: center;",
            ],
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-EHOje",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="c0"
        inline={true}
        tag="span"
      >
        <span
          className="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz c0"
        >
          <Text
            block={false}
            bold={true}
            data-testid="selectLabel"
            invert={false}
            size="medium"
          >
            <Text__StyledText
              block={false}
              bold={true}
              data-testid="selectLabel"
              invert={false}
              size="medium"
            >
              <StyledComponent
                block={false}
                bold={true}
                data-testid="selectLabel"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Text__StyledText-sc-1m0rr67-0",
                      "isStatic": false,
                      "lastClassName": "c1",
                      "rules": Array [
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        [Function],
                        "sup {",
                        "top: -0.5em;",
                        "font-size: 0.875rem;",
                        "position: relative;",
                        "vertical-align: baseline;",
                        "padding-left: 0.1em;",
                        "}",
                      ],
                    },
                    "displayName": "Text__StyledText",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Text__StyledText-sc-1m0rr67-0",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                invert={false}
                size="medium"
              >
                <span
                  className="c1"
                  data-testid="selectLabel"
                  size="medium"
                >
                  The label
                </span>
              </StyledComponent>
            </Text__StyledText>
          </Text>
        </span>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</label>
`;

exports[`Select needs a set of options 1`] = `[Function]`;

exports[`Select positions the down caret so that the text does not overlap it 1`] = `[Function]`;

exports[`Select renders 1`] = `
.c7 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #248700;
  font-size: 1rem;
}

.c7::before {
  content: '\\f105';
}

.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c3 {
  background-color: #fff;
  position: relative;
}

.c4 {
  height: 3.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  -moz-appearance: textfield;
  min-height: 3.25rem;
  max-height: 3.25rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c4::-ms-expand {
  display: none;
}

.c4::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4::-webkit-inner-spin-button,
.c4::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c4:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c5 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c6 {
  line-height: 1;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
}

<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz"
  >
    <label
      for="the-select"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz c0"
      >
        <span
          class="c1"
          data-testid="selectLabel"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <select
        aria-invalid="false"
        class="c4"
        id="the-select"
      >
        <option
          value="value-1"
        >
          text one
        </option>
        <option
          value="value-2"
        >
          text two
        </option>
      </select>
      <div
        class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz c5"
      >
        <div
          class="c6"
        >
          <i
            aria-hidden="true"
            class="c7"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
.c7 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #c12335;
  font-size: 1rem;
}

.c7::before {
  content: '\\f103';
}

.c9 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  color: #c12335;
  font-size: 1rem;
}

.c9::before {
  content: '\\f105';
}

.c1 {
  color: #2a2c2e;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 700;
}

.c1 sup {
  top: -0.5em;
  font-size: 0.875rem;
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
}

.c6 {
  line-height: 1;
}

.c3 {
  background-color: #fff;
  position: relative;
}

.c4 {
  height: 3.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  -moz-appearance: textfield;
  min-height: 3.25rem;
  max-height: 3.25rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c4::-ms-expand {
  display: none;
}

.c4::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c4::-webkit-inner-spin-button,
.c4::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c4:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c4:not(:focus) {
  border-color: #c12335;
}

.c5 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c8 {
  line-height: 1;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
}

<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <div
    class="TDS_Box-modules__spaceBetween___k4Ski TDS_Box-modules__inline___jTHcz"
  >
    <label
      for="the-select"
    >
      <span
        class="TDS_Box-modules__betweenRightMargin-2___20pzC TDS_Box-modules__inline___jTHcz c0"
      >
        <span
          class="c1"
          data-testid="selectLabel"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <select
        aria-invalid="true"
        class="c4"
        id="the-select"
      >
        <option
          value="value-1"
        >
          text one
        </option>
        <option
          value="value-2"
        >
          text two
        </option>
      </select>
      <div
        class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz c5"
      >
        <div
          style="transition:opacity 100ms ease-in-out;opacity:1"
        >
          <div
            class="c6"
          >
            <i
              class="c7"
            />
          </div>
        </div>
        <div
          class="c8"
        >
          <i
            aria-hidden="true"
            class="c9"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
